--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,8 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.3.1",
     "modernizr": "~2.8.1"
+  },
+  "devDependencies": {
+    "riotjs": "~2.0.10"
   }
 }
